--- a/_assets/ci/Jenkinsfile
+++ b/_assets/ci/Jenkinsfile
@@ -24,10 +24,19 @@ node('linux') {
     gitShortSHA = gitSHA.take(7)
     gitBranch = sh(returnStdout: true, script: 'git name-rev --name-only HEAD').trim() - remoteOriginRegex
 
-    stage('Debug') {
+    // For branch builds, replace the old artifact. For develop keep all of them.
+    version = gitBranch == 'develop' ? getVersion(gitBranch, gitShortSHA, '') : getVersion(gitBranch, gitShortSHA, env.BUILD_ID)
+
+    stage('Prep') {
+        println "Current JOB: ${env.JOB_NAME}\nBranch: ${gitBranch}\nSHA: ${gitSHA}\nVersion: ${version}"
         sh 'env'
-        println(gitBranch)
-        println(gitSHA)
+
+        dir(cloneDir) {
+            /* load common lib */
+            cmn = load('_assets/ci/common.groovy')
+
+            sh 'make setup'
+        }
     }
 
     // TODO(adam): enable when unit tests start passing
@@ -35,44 +44,66 @@ node('linux') {
     //     sh 'make ci'
     // }
 
-    stage('Build') {
+    stage('Build packages') {
         sh 'go get github.com/status-im/xgo'
+        dir(cloneDir) {
+            // Ensure folders are created with correct owner (otherwise xgo will create files owned by root)
+            sh 'mkdir -p build/lib/'
+        }
 
         parallel (
             'statusgo-android': {
-                sh 'make statusgo-android'
+                dir(cloneDir) {
+                    sh """
+                        make statusgo-android
+                        cd build/lib/
+                        mv statusgo-android-16.aar status-go-${version}.aar
+                    """
+                }
             },
             'statusgo-ios-simulator': {
-                sh '''
-                    make statusgo-ios-simulator
-                    cd build/bin/statusgo-ios-9.3-framework/
-                    zip -r status-go-ios.zip Statusgo.framework
-                '''
+                dir(cloneDir) {
+                    sh """
+                        make statusgo-ios-simulator
+                        cd build/lib/
+                        zip -r status-go-ios-simulator-${version}.zip statusgo-ios-9.3-framework/Statusgo.framework
+                    """
+                }
+            }
+        )
+
+        parallel (
+            'statusgo-linux': {
+                dir(cloneDir) {
+                    sh """
+                        make statusgo-linux
+                        cd build/lib/
+                        mkdir -p include lib
+                        mv statusgo-linux-amd64.a lib/libstatus.a
+                        mv statusgo-linux-amd64.h include/libstatus.h
+                        zip status-go-linux-${version}.zip lib/* include/*
+                    """
+                }
+            },
+            'statusgo-macos': {
+                dir(cloneDir) {
+                    sh """
+                        make statusgo-macos
+                        cd build/lib/
+                        mkdir -p include lib
+                        mv statusgo-darwin-10.6-amd64.a lib/libstatus.a
+                        mv statusgo-darwin-10.6-amd64.h include/libstatus.h
+                        zip status-go-darwin-${version}.zip lib/* include/*
+                    """
+                }
             }
         )
     }
 
     stage('Deploy') {
-        // For branch builds, replace the old artifact. For develop keep all of them.
-        def version = gitBranch == 'develop' ? getVersion(gitBranch, gitShortSHA, '') : getVersion(gitBranch, gitShortSHA, env.BUILD_ID)
-        def server = Artifactory.server 'artifactory'
-        def uploadSpec = """{
-            "files": [
-                {
-                    "pattern": "build/bin/statusgo-android-16.aar",
-                    "target": "libs-release-local/status-im/status-go/${version}/status-go-${version}.aar"
-                },
-                {
-                    "pattern": "build/bin/statusgo-ios-9.3-framework/status-go-ios.zip",
-                    "target": "libs-release-local/status-im/status-go-ios-simulator/${version}/status-go-ios-simulator-${version}.zip"
-                }
-            ]
-        }"""
-
-        def buildInfo = Artifactory.newBuildInfo()
-        buildInfo.env.capture = false
-        buildInfo.name = 'status-go (' + gitBranch + '-' + gitShortSHA + ')'
-        server.upload(uploadSpec, buildInfo)
-        server.publishBuildInfo(buildInfo)
+        androidArtifactUrl = cmn.uploadArtifact("build/lib/status-go-${version}.aar")
+        linuxArtifactUrl = cmn.uploadArtifact("build/lib/status-go-linux-${version}.zip")
+        iosArtifactUrl = cmn.uploadArtifact("build/lib/status-go-ios-simulator-${version}.zip")
+        macosArtifactUrl = cmn.uploadArtifact("build/lib/status-go-darwin-${version}.zip")
     }
 }
