Re-enable make ci on Jenkinsfile

--- a/_assets/ci/Jenkinsfile
+++ b/_assets/ci/Jenkinsfile
@@ -39,10 +39,9 @@ node('linux') {
         }
     }
 
-    // TODO(adam): enable when unit tests start passing
-    // stage('Test') {
-    //     sh 'make ci'
-    // }
+    stage('Build and test') {
+        sh 'make ci'
+    }
 
     stage('Build packages') {
         sh 'go get github.com/status-im/xgo'
